# lazperf-c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lazperf_c.cpp  lazperf_c.h  stream_utils.h
tests/: test_decompression.c  test_simple.c
